--- a/views/center/monthlyProgress/monthlyProgressCustomTable.ejs
+++ b/views/center/monthlyProgress/monthlyProgressCustomTable.ejs
@@ -143,13 +143,13 @@
                 })
 
                 // মজুদ ******
-                var currentMojudSum = 0;
-                const currMojud = JSON.parse(row.mojud)
-                currMojud.forEach(function(MojudCurrent){
-                    if ( MojudCurrent.time === selectedDate ) {
-                        currentMojudSum += parseInt(MojudCurrent.amount)
-                    }
-                })
+                // var currentMojudSum = 0;
+                // const currMojud = JSON.parse(row.mojud)
+                // currMojud.forEach(function(MojudCurrent){
+                //     if ( MojudCurrent.time === selectedDate ) {
+                //         currentMojudSum += parseInt(MojudCurrent.amount)
+                //     }
+                // })
 
                 // মন্তব্য *********
                 var montobboSum = "";
