--- a/views/pd/monthlyProgress/monthlyProgressCustomTable.ejs
+++ b/views/pd/monthlyProgress/monthlyProgressCustomTable.ejs
@@ -1,4 +1,4 @@
-<%if (records.length >0){ %>
+<%if (cropCatg.length >0){ %>
     <table class="table table-bordered table-striped" id="tblCustomers" cellspacing="0" cellpadding="0">
         <thead>
         <tr>
@@ -20,13 +20,10 @@
             <th>মৃত/বিনষ্ট রাইটআপ</th>
             <th>সর্বমোট (মোট+ডিএই চালানে প্রদান+মৃত/বিনষ্ট রাইটআপ)</th>
             <th>নীট মজুদ</th>
-            <th>মন্তব্য</th>
-            <th>পরিবর্তন</th>
         </tr>
         </thead>
         <tbody>
-        <% records.forEach(function(row){ %>
-
+        <% cropCatg.forEach(function(crop,index){ %>
             <%
                 const currentMonth = selectedDate
                 var startRange = "";
@@ -43,7 +40,6 @@
                     endRange = "jul"+"-"+moment().add(1, "year").format('yyyy')
                 }
 
-
                 // Previous Economic year
 
                 if (moment().format("M") < 7){
@@ -54,141 +50,138 @@
                     prevEconomicEnd = "jul"+"-"+moment().format('yyyy')
                 }
 
+                // ক্যাটাগরি *******
+                var category = ""
+                // সাব-ক্যাটাগরি *******
+                var subCategory = ""
+                // বিবরণ *******
+                var biboron = ""
+                // জাত *******
+                var breed = ""
                 // current production (  উৎপাদন  )*******
                 var currentProductionSum = 0;
                 var previousMonthProduction = 0;
-                const currentProd = JSON.parse(row.productionCurrent)
-                currentProd.forEach(function(prodCurrent){
-                    if ( prodCurrent.time === selectedDate ) {
-                        currentProductionSum += parseInt(prodCurrent.amount)
-                    }
-                    else if ( moment( prodCurrent.time ).isBefore(selectedDate) && moment( prodCurrent.time ).isSameOrAfter(startRange) &&  moment( prodCurrent.time ).isSameOrBefore(endRange) ){
-                        previousMonthProduction += parseInt(prodCurrent.amount)
-                    }
-                })
-
                 // উৎপাদন (লক্ষ্যমাত্রা) *********
                 var productionTargetSum = 0;
-                const TargetProduction = JSON.parse(row.productionTarget)
-                TargetProduction.forEach(function(prodTarget){
-                    if ( moment(currentMonth).isAfter(prodTarget.startTime) &&  moment(currentMonth).isBefore(prodTarget.endTime) ){
-                        productionTargetSum += parseInt(prodTarget.amount)
-                    }
-                })
-
                 // মোট উৎপাদন (চলতি+পূর্ব মাস) *********
                 var totalProductionSum = 0;
-                const TotalProduction = JSON.parse(row.productionTotal)
-                TotalProduction.forEach(function(prodTotal){
-                    if ( moment(currentMonth).isAfter(prodTotal.startTime) &&  moment(currentMonth).isBefore(prodTotal.endTime) ){
-                        totalProductionSum += parseInt(prodTotal.amount)
-                    }
-                })
-
                 //ডিএই চালানে প্রাপ্তি (চলতি মাস) *********
                 var daePraptiSum = 0;
-                const currentDaePrapti = JSON.parse(row.daePrapti)
-                currentDaePrapti.forEach(function(daePraptiCurrent){
-                    if ( daePraptiCurrent.time === selectedDate ) {
-                        daePraptiSum += parseInt(daePraptiCurrent.amount)
-                    }
-                })
-
                 // পূর্ব বছরের জের *********
                 var prevYearJer = 0;
-                currentDaePrapti.forEach(function(daePraptiCurrent){
-                    if ( moment( daePraptiCurrent.time ).isAfter(prevEconomicStart) &&  moment( daePraptiCurrent.time ).isBefore(prevEconomicEnd) ) {
-                        prevYearJer += parseInt(daePraptiCurrent.amount)
-                    }
-                })
-
                 //  বিতরণ ********
                 var currentBitoronSum = 0;
                 var previousMonthBitoronSum = 0;
-                const currBitoron = JSON.parse(row.bitoronCurrentMonth)
-                currBitoron.forEach(function(BitoCurrent){
-                    if ( BitoCurrent.time === selectedDate ) {
-                        currentBitoronSum += parseInt(BitoCurrent.amount)
-                    }
-                    else if ( moment( BitoCurrent.time ).isBefore(selectedDate) && moment( BitoCurrent.time ).isAfter(startRange) &&  moment( BitoCurrent.time ).isBefore(endRange) ){
-                        previousMonthBitoronSum += parseInt(BitoCurrent.amount)
-                    }
-                })
-
                 // মোট বিতরণ ******
                 var totalBitoronSum = 0;
-                const TotalBitoron = JSON.parse(row.bitoronTotal)
-                TotalBitoron.forEach(function(bitorTotal){
-                    if ( moment(currentMonth).isAfter(bitorTotal.startTime) &&  moment(currentMonth).isBefore(bitorTotal.endTime) ){
-                        totalBitoronSum += parseInt(bitorTotal.amount)
-                    }
-                })
-
                 // ডিএই চালানে প্রদান *******
                 var currentDaeProdanSum = 0;
-                const currDaeProdan = JSON.parse(row.daeProdan)
-                currDaeProdan.forEach(function(DaeProdanCurrent){
-                    if ( DaeProdanCurrent.time === selectedDate ) {
-                        currentDaeProdanSum += parseInt(DaeProdanCurrent.amount)
-                    }
-                })
-
                 // মৃত/বিনষ্ট ********
                 var currentMritoSum = 0;
-                const currMrito = JSON.parse(row.deadWriteup)
-                currMrito.forEach(function(MritoCurrent){
-                    if ( MritoCurrent.time === selectedDate ) {
-                        currentMritoSum += parseInt(MritoCurrent.amount)
-                    }
-                })
-
-                // মজুদ ******
-                // var currentMojudSum = 0;
-                // const currMojud = JSON.parse(row.mojud)
-                // currMojud.forEach(function(MojudCurrent){
-                //     if ( MojudCurrent.time === selectedDate ) {
-                //         currentMojudSum += parseInt(MojudCurrent.amount)
-                //     }
-                // })
-
                 // মন্তব্য *********
-                var montobboSum = "";
-                const currMontobbo = JSON.parse(row.comment)
-                currMontobbo.forEach(function(MontobboCurrent){
-                    if ( MontobboCurrent.time === selectedDate ) {
-                        montobboSum = MontobboCurrent.msg
-                    }
-                })
-
-                console.log("start",row.id)
-                console.log("view catg",row.category)
-                console.log("view catg",row.subCategory)
-                console.log("view catg",row.biboron)
-                console.log("view catg",row.breed)
-                console.log("view catg",productionTargetSum)
-                console.log("view catg",currentProductionSum)
-                console.log("view catg",previousMonthProduction)
-
-                console.log("view catg",daePraptiSum)
-                console.log("view catg",prevYearJer)
-
-                console.log("view catg",currentBitoronSum)
-                console.log("view catg",previousMonthBitoronSum)
-
-                console.log("view catg",currentDaeProdanSum)
-                console.log("view catg",currentMritoSum)
-
-
-                console.log("view catg",montobboSum)
-                console.log("Done")
+                // var montobboSum = "";
 
             %>
+            <% records.forEach(function(row){ %>
+                <%
+                    if(row.breed === crop.name){
+                        category = row.category;
+                        subCategory = row.subCategory;
+                        biboron = row.biboron;
+                        breed = row.breed;
+                        // current production (  উৎপাদন  )*******
+                        const currentProd = JSON.parse(row.productionCurrent)
+                        currentProd.forEach(function(prodCurrent){
+                            if ( prodCurrent.time === selectedDate ) {
+                                currentProductionSum += parseInt(prodCurrent.amount)
+                            }
+                            else if ( moment( prodCurrent.time ).isBefore(selectedDate) && moment( prodCurrent.time ).isSameOrAfter(startRange) &&  moment( prodCurrent.time ).isSameOrBefore(endRange) ){
+                                previousMonthProduction += parseInt(prodCurrent.amount)
+                            }
+                        })
+
+                        // উৎপাদন (লক্ষ্যমাত্রা) *********
+                        const TargetProduction = JSON.parse(row.productionTarget)
+                        TargetProduction.forEach(function(prodTarget){
+                            if ( moment(currentMonth).isAfter(prodTarget.startTime) &&  moment(currentMonth).isBefore(prodTarget.endTime) ){
+                                productionTargetSum += parseInt(prodTarget.amount)
+                            }
+                        })
+
+                        // মোট উৎপাদন (চলতি+পূর্ব মাস) *********
+                        const TotalProduction = JSON.parse(row.productionTotal)
+                        TotalProduction.forEach(function(prodTotal){
+                            if ( moment(currentMonth).isAfter(prodTotal.startTime) &&  moment(currentMonth).isBefore(prodTotal.endTime) ){
+                                totalProductionSum += parseInt(prodTotal.amount)
+                            }
+                        })
+
+                        //ডিএই চালানে প্রাপ্তি (চলতি মাস) *********
+                        const currentDaePrapti = JSON.parse(row.daePrapti)
+                        currentDaePrapti.forEach(function(daePraptiCurrent){
+                            if ( daePraptiCurrent.time === selectedDate ) {
+                                daePraptiSum += parseInt(daePraptiCurrent.amount)
+                            }
+                        })
+
+                        // পূর্ব বছরের জের *********
+                        currentDaePrapti.forEach(function(daePraptiCurrent){
+                            if ( moment( daePraptiCurrent.time ).isAfter(prevEconomicStart) &&  moment( daePraptiCurrent.time ).isBefore(prevEconomicEnd) ) {
+                                prevYearJer += parseInt(daePraptiCurrent.amount)
+                            }
+                        })
+
+                        //  বিতরণ ********
+                        const currBitoron = JSON.parse(row.bitoronCurrentMonth)
+                        currBitoron.forEach(function(BitoCurrent){
+                            if ( BitoCurrent.time === selectedDate ) {
+                                currentBitoronSum += parseInt(BitoCurrent.amount)
+                            }
+                            else if ( moment( BitoCurrent.time ).isBefore(selectedDate) && moment( BitoCurrent.time ).isAfter(startRange) &&  moment( BitoCurrent.time ).isBefore(endRange) ){
+                                previousMonthBitoronSum += parseInt(BitoCurrent.amount)
+                            }
+                        })
+
+                        // মোট বিতরণ ******
+                        const TotalBitoron = JSON.parse(row.bitoronTotal)
+                        TotalBitoron.forEach(function(bitorTotal){
+                            if ( moment(currentMonth).isAfter(bitorTotal.startTime) &&  moment(currentMonth).isBefore(bitorTotal.endTime) ){
+                                totalBitoronSum += parseInt(bitorTotal.amount)
+                            }
+                        })
+
+                        // ডিএই চালানে প্রদান *******
+                        const currDaeProdan = JSON.parse(row.daeProdan)
+                        currDaeProdan.forEach(function(DaeProdanCurrent){
+                            if ( DaeProdanCurrent.time === selectedDate ) {
+                                currentDaeProdanSum += parseInt(DaeProdanCurrent.amount)
+                            }
+                        })
+
+                        // মৃত/বিনষ্ট ********
+                        const currMrito = JSON.parse(row.deadWriteup)
+                        currMrito.forEach(function(MritoCurrent){
+                            if ( MritoCurrent.time === selectedDate ) {
+                                currentMritoSum += parseInt(MritoCurrent.amount)
+                            }
+                        })
+
+                        // মন্তব্য *********
+                        // const currMontobbo = JSON.parse(row.comment)
+                        // currMontobbo.forEach(function(MontobboCurrent){
+                        //     if ( MontobboCurrent.time === selectedDate ) {
+                        //         montobboSum = MontobboCurrent.msg
+                        //     }
+                        // })
+                    }
+                %>
+            <% }) %>
 
             <tr>
-                <td> <%= row.category %></td>
-                <td><%= row.subCategory %></td>
-                <td><%= row.biboron %></td>
-                <td><%= row.breed %></td>
+                <td> <%= category %></td>
+                <td><%= subCategory %></td>
+                <td><%= biboron %></td>
+                <td><%= breed %></td>
                 <td><%= new Number(productionTargetSum).toLocaleString("bn-BD") %></td>
                 <td><%= new Number(currentProductionSum).toLocaleString("bn-BD") %></td>
                 <td> <%= new Number(previousMonthProduction).toLocaleString("bn-BD") %> </td>
@@ -203,10 +196,10 @@
                 <td><%= new Number(currentMritoSum).toLocaleString("bn-BD") %></td>
                 <td><%= new Number(currentDaeProdanSum + currentMritoSum).toLocaleString("bn-BD") %></td>
                 <td><%= new Number((currentProductionSum + previousMonthProduction + daePraptiSum + prevYearJer)-(currentDaeProdanSum + currentMritoSum)).toLocaleString("bn-BD") %></td>
-                <td><%= montobboSum %></td>
-                <td><a class="btn btn-primary btn-xs" href="/center/monthlyProgressEdit/<%= row.id %>"><i class="fa fa-edit"></i></a></td>
             </tr>
+
         <% }) %>
+
         </tbody>
     </table>
 <% }else{ %>
