--- a/views/center/monthlyProgress/monthlyProgressFormEdit.ejs
+++ b/views/center/monthlyProgress/monthlyProgressFormEdit.ejs
@@ -14,7 +14,7 @@
             var currentProductionSum = 0;
             const currentProd = JSON.parse(monthProgress.productionCurrent)
             currentProd.forEach(function(prodCurrent){
-                if ( prodCurrent.time === moment().format("MMM-YYYY").toLowerCase() ) {
+                if ( prodCurrent.time === editDate ) {
                     currentProductionSum += parseInt(prodCurrent.amount)
                 }
             })
@@ -23,7 +23,7 @@
             var daePraptiSum = 0;
             const currentDaePrapti = JSON.parse(monthProgress.daePrapti)
             currentDaePrapti.forEach(function(daePraptiCurrent){
-                if ( daePraptiCurrent.time === moment().format("MMM-YYYY").toLowerCase() ) {
+                if ( daePraptiCurrent.time === editDate ) {
                     daePraptiSum += parseInt(daePraptiCurrent.amount)
                 }
             })
@@ -32,7 +32,7 @@
             var currentBitoronSum = 0;
             const currBitoron = JSON.parse(monthProgress.bitoronCurrentMonth)
             currBitoron.forEach(function(BitoCurrent){
-                if ( BitoCurrent.time === moment().format("MMM-YYYY").toLowerCase() ) {
+                if ( BitoCurrent.time === editDate ) {
                     currentBitoronSum += parseInt(BitoCurrent.amount)
                 }
             })
@@ -41,7 +41,7 @@
             var currentDaeProdanSum = 0;
             const currDaeProdan = JSON.parse(monthProgress.daeProdan)
             currDaeProdan.forEach(function(DaeProdanCurrent){
-                if ( DaeProdanCurrent.time === moment().format("MMM-YYYY").toLowerCase() ) {
+                if ( DaeProdanCurrent.time === editDate ) {
                     currentDaeProdanSum += parseInt(DaeProdanCurrent.amount)
                 }
             })
@@ -50,24 +50,24 @@
             var currentMritoSum = 0;
             const currMrito = JSON.parse(monthProgress.deadWriteup)
             currMrito.forEach(function(MritoCurrent){
-                if ( MritoCurrent.time === moment().format("MMM-YYYY").toLowerCase() ) {
+                if ( MritoCurrent.time === editDate ) {
                     currentMritoSum += parseInt(MritoCurrent.amount)
                 }
             })
 
             // মজুদ ******
-            var currentMojudSum = 0;
-            const currMojud = JSON.parse(monthProgress.mojud)
-            currMojud.forEach(function(MojudCurrent){
-                if ( MojudCurrent.time === moment().format("MMM-YYYY").toLowerCase() ) {
-                    currentMojudSum += parseInt(MojudCurrent.amount)
-                }
-            })
+            // var currentMojudSum = 0;
+            // const currMojud = JSON.parse(monthProgress.mojud)
+            // currMojud.forEach(function(MojudCurrent){
+            //     if ( MojudCurrent.time === moment().format("MMM-YYYY").toLowerCase() ) {
+            //         currentMojudSum += parseInt(MojudCurrent.amount)
+            //     }
+            // })
 
             var montobboSum = "";
             const currMontobbo = JSON.parse(monthProgress.comment)
             currMontobbo.forEach(function(MontobboCurrent){
-                if ( MontobboCurrent.time === moment().format("MMM-YYYY").toLowerCase() ) {
+                if ( MontobboCurrent.time === editDate ) {
                     montobboSum = MontobboCurrent.msg
                 }
             })
@@ -77,7 +77,7 @@
 
         <div class="main-content">
             <div class="container-fluid">
-                <h4 class="text-right"><b>Month & Year : </b><span> <%= moment().locale("bn").format("ll")   %></span></h4>
+                <h4 class="text-right"><b>Month & Year : </b><span> <%= moment(editDate).locale("bn").format("MMM-YYYY")   %></span></h4>
                 <div class="row clearfix">
 
                     <div id="signupbox" style="margin-top:50px" class="mainbox col-md-12 col-md-offset-12 col-sm-12 col-sm-offset-12">
@@ -219,17 +219,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="col">
-                                            <label for="mojud" class="col control-label">নীট মজুদ (চলতি মাস)</label>
-                                            <div class="row">
-                                                <div class="col-3">
-                                                    <input type="text" value="<%= currentMojudSum %> + " readonly class="form-control">
-                                                </div>
-                                                <div class="col-9">
-                                                    <input type="text" class="form-control" name="mojud" placeholder="নীট মজুদ" value="0">
-                                                </div>
-                                            </div>
-                                        </div>
+
                                         <div class="col">
                                             <label for="comment" class="col-md-3 control-label">মন্তব্য</label>
                                             <input type="text" class="form-control" name="comment" placeholder="মন্তব্য" value="<%= montobboSum %>" >
@@ -240,7 +230,7 @@
                                     <div class="form-row mt-3">
                                         <div class="col">
 
-                                            <input type="hidden" name="editDate" readonly class="date-picker form-control" id="startDate" value="<%= moment().format("MMM-yyyy").toLowerCase() %>" />
+                                            <input type="hidden" name="editDate" readonly class="date-picker form-control" id="startDate" value="<%= editDate %>" />
                                         </div>
 
 
