--- a/views/pd/topSheet/topSheet.ejs
+++ b/views/pd/topSheet/topSheet.ejs
@@ -13,6 +13,7 @@
                                 <label >Choose a Centers:</label>
                                 <select id="center" name="center" required>
                                     <option value="">Choose center</option>
+                                    <option value="all">সকল সেন্টার </option>
                                     <% if (centers.length >0){ %>
                                         <% centers.forEach(function (center) { %>
                                             <option value="<%= center.id %>"><%= center.center %></option>
