unknown error may be solved

--- a/views/pd/monthlyProgress/monthlyProgressCustomTable.ejs
+++ b/views/pd/monthlyProgress/monthlyProgressCustomTable.ejs
@@ -25,7 +25,7 @@
         <tbody>
         <% cropCatg.forEach(function(crop,index){ %>
             <%
-                const currentMonth = selectedDate
+                var currentMonth = selectedDate
                 var startRange = "";
                 var endRange = "";
 
