slight edit forntend

--- a/views/includes/sidebar.ejs
+++ b/views/includes/sidebar.ejs
@@ -1,6 +1,6 @@
 <div class="app-sidebar colored">
     <div class="sidebar-header">
-        <a class="header-brand" href="../index.ejs">
+        <a class="header-brand" href="#">
             <% console.log("sidebar", locals.type) %> 
             <span class="text"> Admin </span>
         </a>
