--- a/views/index.ejs
+++ b/views/index.ejs
@@ -74,7 +74,7 @@
             <span class="header-menu-text">মেন্যু</span>
             <span class="header-menu-icon"></span>
         </a>
-        <a href="/center/login" class="btn btn-primary mt-5" style="margin: 20px;background: #eaeaea;">
+        <a href="/center/login" class="btn btn-primary mt-5" style="margin: 20px;background: #42d055;color: white;">
             Login
         </a>
 
