--- a/views/pd/topSheet/topSheet.ejs
+++ b/views/pd/topSheet/topSheet.ejs
@@ -21,7 +21,7 @@
                                         <div class="col-md-3"></div>
                                         <div class="col-md-2">
                                             <!--                                <label >Choose a Center:</label>-->
-                                            <select id="center" name="center" required>
+                                            <select id="center" name="center" class="form-control" required>
                                                 <option value="">Choose center</option>
                                                 <option value="all">সকল সেন্টার </option>
                                                 <% if (centers.length >0){ %>
