--- a/views/includes/sidebar.ejs
+++ b/views/includes/sidebar.ejs
@@ -20,6 +20,9 @@
                     <div class="nav-item ">
                         <a href="/pd/center"><i class="ik ik-gitlab"></i><span>সেন্টার ইনফরমেশন</span> </a>
                     </div>
+                    <div class="nav-item ">
+                        <a href="/pd/adminInfo"><i class="ik ik-gitlab"></i><span>সেন্ট্রাল এডমিন ইনফরমেশন</span> </a>
+                    </div>
                     <div class="nav-item">
                         <a href="/pd/newRajosshoCodeTable"><i class="ik ik-command"></i><span>রাজস্ব প্রাপ্তির কোডসমূহ</span></a>
                     </div>
