--- a/views/index.ejs
+++ b/views/index.ejs
@@ -94,7 +94,7 @@
                 <div class="row text-center">
             
                         <a href="/">
-                            <img src="landingPage/images/dae.png" alt="Homepage" width="80px">
+                            <img src="landingPage/images/daelogo.png" alt="Homepage" width="80px">
                         </a>
                         <a class="text-center" href="/">
                             <img src="landingPage/images/bdlogo.png" alt="Homepage" width="80px">
