code_in_sidebar

--- a/views/center/monthlyProgress/monthlyProgressForm.ejs
+++ b/views/center/monthlyProgress/monthlyProgressForm.ejs
@@ -115,7 +115,13 @@
                                         </div>
                                     </div>
 
+                                    <div class="col-md-offset-3 col-md-9">
+                                    <button> <a href="/center/monthlyProgress" class="col-md-offset-3 col-md-9">Finish Submitting Report</a>
+                                     </button>
+                                     </div>
+
                                 </form>
+                                
                             </div>
                         </div>
                     </div>
