--- a/views/pd/expense/newKhorochCodeTable.ejs
+++ b/views/pd/expense/newKhorochCodeTable.ejs
@@ -10,6 +10,12 @@
                             <h1 class="text-center"><%= title %></h1>
                         </div>
                     </div>
+                    <div class="row mb-2">
+                        <div class="col-md-12">
+                            <a href="/pd/newKhorochCodeForm" class="btn btn-success btn-group-sm ">খরচের (বিএস্টেটমেন্ট) হিসাব বিবরণীর কোডসমূহ এর ফর্ম</a>
+                        </div>
+
+                    </div>
                      <div class="table-responsive" id="output">
                         <%if (records.length >0){ %>
                             <table class="table table-bordered table-striped" id="tblCustomers" cellspacing="0" cellpadding="0">
