--- a/views/pd/rajossho/newRajosshoCodeTable.ejs
+++ b/views/pd/rajossho/newRajosshoCodeTable.ejs
@@ -24,12 +24,12 @@
                             </select>
                         </div> -->
                     </div>
-                    <!-- <div class="row mb-2">
+                    <div class="row mb-2">
                         <div class="col-md-12">
-                            <a href="/pd/centerForm" class="btn btn-success btn-group-sm ">সেন্টারের যোগাযোগ তথ্য</a>
+                            <a href="/pd/newRajosshoCodeForm" class="btn btn-success btn-group-sm ">মাসিক রাজস্ব অর্থ প্রাপ্তির কোডসমূহ ফর্ম</a>
                         </div>
 
-                    </div> -->
+                    </div>
 
                      <div class="table-responsive" id="output">
                         <%if (records.length >0){ %>
